Fix text out of box when zoomming

--- a/public/styles.css
+++ b/public/styles.css
@@ -31,6 +31,8 @@ body{
     -webkit-background-size: cover;
     -o-background-size: cover;
     background-size: auto;
+    position: absolute;
+    
     /*background-position: fixed;*/
 }
 
@@ -42,6 +44,7 @@ body{
 	background-color: white;
 	border: 1px solid rgba(0, 0, 0, 0.1);
 	border-radius: 15px;
+
 }
 
 .left-column{
